# mhpc1.8

./: .gitignore  CMakeLists.txt  GTest.cmake  Makefile  README.md  Readme  benchmark.sh  compile.sh  file  github  ljmd-serial.x  ljmd.c  mpi.md  omp.md  optimization_benchmark.md  tests.sh  todo  wrapper.sh
.github/workflows/: cmake.yml
BASE/: argon_108.seconds  argon_2916.seconds  test_kinetic
Obj-serial/: Makefile
examples/: .gitignore  argon_108.xyz  argon_2916.xyz
img/: mpi.tsv  optimization_benchmark.md
include/: force.h  input.h  mympi.h  output.h  prototypes.h  utilities.h  verlet.h
src/: Makefile  force.c  input.c  ljmd.c  mympi.c  output.c  utilities.c  verlet.c
tests/: test_force.cpp  test_force_pbc.cpp  test_kinetic.cpp  test_pbc.cpp
